fix: [PL-21212]: fixed alignment of error icon (#551)
* fix: [PL-21212]: fixed alignment of error icon

* fix: [PL-21212]: review comments - used design system components and minimized CSS usage

* test: [PL-21212]: updated snapshot

* Revert "test: [PL-21212]: updated snapshot"

This reverts commit c67bce2ca2ffb3bf0255880c426d9830cda9c75a.

* Revert "fix: [PL-21212]: review comments - used design system components and minimized CSS usage"

This reverts commit 47c8341d212013a546c5b0264cfd80e8ab9a3e46.

--- a/src/components/FormError/FormError.css
+++ b/src/components/FormError/FormError.css
@@ -1,13 +1,13 @@
 .errorDiv {
   margin-top: var(--spacing-small);
   display: flex;
-  align-items: center;
 }
 
 .error {
   font-size: var(--font-size-normal);
   color: var(--red-600);
   margin-left: var(--spacing-xsmall);
+  word-break: break-word;
 }
 
 .errorIcon {
@@ -18,4 +18,5 @@
 
 .errorTextIcon {
   color: var(--red-600);
+  margin-top: var(--spacing-tiny) !important;
 }
